# soogo

./: .copyright_header_template.txt  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
blackboxoptim/: __init__.py  acquisition.py  optimize.py
docs/: conf.py  gp.rst  index.rst  model.rst  optimize_result.rst  problem.rst  rbf.rst  rbf_kernel.rst  requirements.txt  soogo.rst  surrogate.rst  termination.rst  tests.rst  utils.rst
examples/: README.md  gosac.ipynb  optimization.ipynb  sampling.ipynb  socemo.ipynb
main/: .buildinfo  CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
scripts/: check_copyright.py
soogo/: __init__.py  acquisition.py  gp.py  nomad.py  optimize.py  optimize_result.py  problem.py  rbf.py  sampling.py  surrogate.py  termination.py  utils.py
tests/: gosac_benchmark.py  test_acquisition.py  test_docs.py  test_examples.py  test_gosac_bench.py  test_gp.py  test_integrations.py  test_optimize.py  test_optimize_convergence.py  test_optimize_result.py  test_rbf.py  test_sampling.py  test_surrogate.py  test_termination.py  test_utils.py  test_vlse_bench.py
v0.1.0/: .buildinfo  blackboxopt.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html
v0.2.0/: .buildinfo  blackboxopt.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html  tests.ssurjano_benchmark.html
v0.3.0/: .buildinfo  blackboxopt.html  genindex.html  index.html  (+7 more)
(+493 files in other folders)
